--- a/custom_components/shopping_history/services.yaml
+++ b/custom_components/shopping_history/services.yaml
@@ -7,7 +7,8 @@ add_order:
       description: "ID của Integration (Vào Settings > Integrations > Shopping History > 3 chấm > Copy Entry ID)."
       required: true
       selector:
-        text:
+        config_entry:
+          integration: shopping_history
     name:
       name: "Tên hàng hóa *"
       description: "Ví dụ: iPhone 15 Pro Max"
